# SpGEMM

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarks/: benchmark_diag_matmul.py  benchmark_petsc_spgemm.py  benchmark_random_sparse_matmul.py  benchmark_strategy_candidates.py
examples/: benchmark_pyg_line57_random.py  benchmark_taobao_line57_subgraph.py  compare_with_scipy_at.py
src/scipy_sparse_opt/: __init__.py  _spgemm_cpp.cpp  diag_fastpath.py  lib.py
tests/: test_diag_fastpath.py  test_lib_api.py
